# rocm-examples

./: .gitlab-ci.yml  CMakeLists.txt  README.md  ROCm-Examples-Portable-VS2017.sln  ROCm-Examples-Portable-VS2019.sln  ROCm-Examples-Portable-VS2022.sln  ROCm-Examples-VS2017.sln  ROCm-Examples-VS2019.sln  ROCm-Examples-VS2022.sln
.gitlab/merge_request_templates/: example.md
Applications/: CMakeLists.txt
Applications/bitonic_sort/: CMakeLists.txt  bitonic_sort_vs2017.vcxproj  bitonic_sort_vs2017.vcxproj.filters  bitonic_sort_vs2019.vcxproj  bitonic_sort_vs2019.vcxproj.filters  bitonic_sort_vs2022.vcxproj  bitonic_sort_vs2022.vcxproj.filters
Applications/convolution/: CMakeLists.txt  convolution_vs2017.vcxproj  convolution_vs2017.vcxproj.filters  convolution_vs2019.vcxproj  convolution_vs2019.vcxproj.filters  convolution_vs2022.vcxproj  convolution_vs2022.vcxproj.filters
Applications/floyd_warshall/: CMakeLists.txt  floyd_warshall_vs2017.vcxproj  floyd_warshall_vs2017.vcxproj.filters  floyd_warshall_vs2019.vcxproj  floyd_warshall_vs2019.vcxproj.filters  floyd_warshall_vs2022.vcxproj  floyd_warshall_vs2022.vcxproj.filters
Applications/histogram/: CMakeLists.txt  histogram_vs2017.sln  histogram_vs2017.vcxproj  histogram_vs2017.vcxproj.filters  histogram_vs2019.vcxproj  histogram_vs2019.vcxproj.filters  histogram_vs2022.vcxproj  histogram_vs2022.vcxproj.filters
Applications/monte_carlo_pi/: CMakeLists.txt  main.hip  monte_carlo_pi_vs2017.vcxproj  monte_carlo_pi_vs2017.vcxproj.filters  monte_carlo_pi_vs2019.vcxproj  monte_carlo_pi_vs2019.vcxproj.filters  monte_carlo_pi_vs2022.vcxproj  monte_carlo_pi_vs2022.vcxproj.filters
Applications/prefix_sum/: CMakeLists.txt  prefix_sum_vs2017.sln  prefix_sum_vs2017.vcxproj  prefix_sum_vs2017.vcxproj.filters  prefix_sum_vs2019.sln  prefix_sum_vs2019.vcxproj  prefix_sum_vs2019.vcxproj.filters  prefix_sum_vs2022.sln  prefix_sum_vs2022.vcxproj  prefix_sum_vs2022.vcxproj.filters
Common/: HipPlatform.cmake  example_utils.hpp  hipfft_utils.hpp  rocrand_utils.hpp
Dockerfiles/: hip-libraries-cuda-ubuntu.Dockerfile  hip-libraries-rocm-ubuntu.Dockerfile
HIP-Basic/: CMakeLists.txt
HIP-Basic/assembly_to_executable/: CMakeLists.txt  assembly_to_executable_vs2017.vcxproj  assembly_to_executable_vs2017.vcxproj.filters  assembly_to_executable_vs2019.vcxproj  assembly_to_executable_vs2022.vcxproj  assembly_to_executable_vs2022.vcxproj.filters
HIP-Basic/bandwidth/: bandwidth_vs2017.vcxproj  bandwidth_vs2019.vcxproj  bandwidth_vs2019.vcxproj.filters  bandwidth_vs2022.vcxproj
HIP-Basic/bit_extract/: bit_extract_vs2017.vcxproj  bit_extract_vs2019.vcxproj  bit_extract_vs2019.vcxproj.filters  bit_extract_vs2022.vcxproj
HIP-Basic/cooperative_groups/: cooperative_groups_vs2017.vcxproj  cooperative_groups_vs2019.vcxproj  cooperative_groups_vs2019.vcxproj.filters  cooperative_groups_vs2022.vcxproj
HIP-Basic/device_globals/: device_globals_vs2017.vcxproj  device_globals_vs2017.vcxproj.filters  device_globals_vs2019.vcxproj  (+2 more)
Scripts/: WindowsRunner.ps1
Tutorials/: CMakeLists.txt
(+435 files in other folders)
